--- a/app/src/App.css
+++ b/app/src/App.css
@@ -24,7 +24,15 @@
   }
 }
 
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .form {
+  margin-bottom: 1em;
 }
 
 input {
@@ -33,6 +41,8 @@ input {
 }
 
 .images {
+  display: flex;
+  flex-direction: row-reverse;
 }
 
 .App-link {
